# Gemini-CLI-Auth-Manager

./: .gitignore  README-CN.md  README.md  dummy_gemini.py  gemini_cli_auth_manager.py  install.py  old_main.py  old_main.txt  ping_log.txt  pyproject.toml  quota_auto_switch.py  quota_pre_check.py  test_ping_integration.py  test_ping_logic.py
.gemini/skills/gemini-account-lifecycle/: SKILL.md
.gemini/skills/gemini-auth-manager-maintenance/: SKILL.md
src/gemini_auth_manager/cli/: install.py  main.py
src/gemini_auth_manager/hooks/: quota_auto_switch.py  quota_pre_check.py
src/gemini_auth_manager/utils/: quota_api_client.py  restart_helper.py
